:sparkles: Add menu vertical and crate component include in nav vertical

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,5 @@
 @import "./settings";
 @import "./components/navigationHorizontal";
+@import "./components/navigationVertical";
+@import "./components/casesIncludesLogo";
+@import "./components/profil";
