:lipstick: adjust style

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,5 @@
 @import "./components/navigationVertical";
 @import "./components/casesIncludesLogo";
 @import "./components/profil";
+@import "./components/home";
+@import "./components/cardMacro";
