--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,7 @@
 @import "./components/profil";
 @import "./components/home";
 @import "./components/cardMacro";
+@import "./components/barCharts";
+@import "./components/radarCharts";
+@import "./components/pieCharts";
+@import "./components/lineCharts";
