:lipstick: add box shadow

--- a/src/styles/components/_barCharts.scss
+++ b/src/styles/components/_barCharts.scss
@@ -4,6 +4,7 @@
   background: #fbfbfb;
   padding: 30px 30px;
   border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
 
   .contain_legends {
     display: flex;
