--- a/src/styles/components/_cardMacro.scss
+++ b/src/styles/components/_cardMacro.scss
@@ -7,6 +7,7 @@
   border: 6px;
   background-color: #fbfbfb;
   border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
 
 
   .contain_logo {
