--- a/src/styles/components/_lineCharts.scss
+++ b/src/styles/components/_lineCharts.scss
@@ -4,6 +4,7 @@
   width: 258px;
   height: 263px;
   border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
 
   .contain_title {
     position: absolute;
