--- a/src/styles/components/_radarCharts.scss
+++ b/src/styles/components/_radarCharts.scss
@@ -1,8 +1,9 @@
 .radar_chart{
-    margin-top: 10px;
     width: 258px;
     height: 263px;
     background: #282D30;
     border-radius: 5px;
-    padding: 0px 20px;
+    padding: 0px 3px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
 }
+
