--- a/src/styles/components/_pieCharts.scss
+++ b/src/styles/components/_pieCharts.scss
@@ -4,8 +4,9 @@
   width: 258px;
   height: 263px;
   border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
 
-  .score{
+  .score {
     position: relative;
     top: 10%;
     left: 10%;
@@ -20,13 +21,25 @@
     right: 38%;
     font-size: 16px;
     font-weight: 500;
-    color: #74798C;
+    color: #74798c;
+    z-index: 1000;
 
-    .score_number{
-        font-size: 26px;
-        font-weight: 700;
-        color: #282D30;
+  
+// .round{
+//   position: absolute;
+//   top: -60%;
+//   background-color: white;
+//   border-radius: 50%;
+//   width: 145px;
+//   height: 145px;
+//   right: -78%;
+//   z-index: 1;
+// }
 
+    .score_number {
+      font-size: 26px;
+      font-weight: 700;
+      color: #282d30;
     }
   }
 }
