--- a/src/styles/components/_barCharts.scss
+++ b/src/styles/components/_barCharts.scss
@@ -58,3 +58,9 @@
   align-content: center;
   padding: 4px 8px;
 }
+@media screen and (max-width: 1446px) {
+  .barChart {
+    margin-top: 30px;
+    width: 100%;
+  }
+}
