--- a/src/styles/components/_cardMacro.scss
+++ b/src/styles/components/_cardMacro.scss
@@ -47,3 +47,10 @@
 .bg--lipides {
   background-color: #fd51811a;
 }
+
+@media screen and (max-width: 1446px) {
+  .CardMacro {
+    width: 200px;
+    height: 100px;
+  }
+}
