--- a/src/styles/components/_casesIncludesLogo.scss
+++ b/src/styles/components/_casesIncludesLogo.scss
@@ -8,3 +8,10 @@
   background: white;
   margin-bottom: 20px;
 }
+
+@media screen and (max-width: 1446px) {
+  .CasesIncludeLogo {
+    width: 55px;
+    height: 55px;
+  }
+}
