--- a/src/styles/components/_navigationHorizontal.scss
+++ b/src/styles/components/_navigationHorizontal.scss
@@ -15,12 +15,19 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
-    
+
     a {
       color: white;
     }
   }
   .nav-active {
     color: red;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .NavigationHorizontal {
+    padding: 10px 0px;
+    font-size: 18px;
   }
 }
